# parled12

./: README.md
daemon/: Makefile.am  client.c  client.h  config.c  config.h  configure.ac  daemon.c  daemon.h  evloop.c  evloop.h  main.c  make.sh  master.c  master.h  parport.c  parport.h  parports.c  parports.h  server.c  server.h  slave.c  slave.h
init/: parled12-sysvinit  parled12.service
proof/: make.sh  parled12a.c  parled12b.c
scheme/: bread_board.sch  printed_circuit_board.pcb  printed_circuit_board.sch
scheme/symbols/: DB25.sym  GND.sym  led.sym  resistor-0.125W.sym
